--- a/app/assets/stylesheets/name_hover.scss
+++ b/app/assets/stylesheets/name_hover.scss
@@ -43,6 +43,7 @@
 .hover-cover-img {
   width: 180px;
   height: 120px;
+  object-fit: cover;
   border-top-right-radius: 3px;
   border-top-left-radius: 3px;
   &:before {
@@ -53,6 +54,7 @@
 .hover-prof-img {
   width: 60px;
   height: 60px;
+  object-fit: cover;
   position: absolute;
   top: 78px;
   left: 10px;
