--- a/app/assets/stylesheets/post_item.scss
+++ b/app/assets/stylesheets/post_item.scss
@@ -79,6 +79,7 @@
 .post-profile-pic {
   width: 38px;
   height: 38px;
+  object-fit: cover;
   border-radius: 50%;
   margin: 12px 0 0 12px;
 }
@@ -116,6 +117,7 @@
 .post-item-profile-pic {
   width: 38px;
   height: 38px;
+  object-fit: cover;
   border-radius: 50%;
   margin: 0 8px 0 0;
   cursor: pointer;
@@ -238,4 +240,5 @@
 
 .post-body-img {
   max-width: 492px;
+  object-fit: cover;
 }
